--- a/frontend/app.json
+++ b/frontend/app.json
@@ -9,7 +9,11 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "Precisamos da sua localização para mostrar o trajeto da entrega.",
+        "NSLocationAlwaysUsageDescription": "Precisamos da sua localização mesmo em segundo plano para melhorar a experiência."
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -40,7 +44,14 @@
         }
       ],
       "expo-font",
-      "expo-web-browser"
+      "expo-web-browser",
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Este app utiliza sua localização para mostrar sua posição e a das entregas no mapa, mesmo em segundo plano.",
+          "isBackgroundLocationEnabled": true
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
