--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,6 @@
   "version": "1.0.0",
   "packageManager": "yarn@1.22.22",
   "scripts": {
-    "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) { console.error('\\u001b[31mVocê deve usar o Yarn para instalar as dependências. Por favor, rode \\`yarn install\\`.\\u001b[39m'); process.exit(1); }\"",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -19,22 +18,22 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.16",
-    "expo": "54.0.7",
+    "expo": "54.0.12",
     "expo-blur": "~15.0.7",
-    "expo-constants": "~18.0.8",
+    "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-location": "~19.0.7",
-    "expo-router": "~6.0.4",
+    "expo-location": "^19.0.7",
+    "expo-router": "~6.0.10",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
+    "expo-web-browser": "~15.0.8",
     "nativewind": "^4.0.36",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -44,7 +43,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.20.1",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-size-matters": "^0.4.2",
